arkts_static_test/17_Experimental_Features/ets_cases/17.9.1_Explicit_Function_Overload/compile-pass/EXP2_17_09_1_007_PASS_FUNCOVERLOAD_RETURNTYPEDIFF.ets
/*
* Copyright (c) 2021-2026 Huawei Device Co., Ltd.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
*/
/**
 * @id EXP2_17_09_1_007_PASS_FUNCOVERLOAD_RETURNTYPEDIFF
 * @expect compile-pass
 * @section 17.9.1
 * @design overload 函数可以有不同返回类型
 * @note 正向用例：不同返回类型不冲突
 */
function toInt(a: int): int { return a }
function toString(a: int): string { return 'val:' + a }
function toBool(a: int): boolean { return a > 0 }
overload convert { toInt, toString, toBool }
